Adding the support for the odometer, haven't checked if this compiles yet

--- a/ArduRover_for_CART.vcxproj
+++ b/ArduRover_for_CART.vcxproj
@@ -123,6 +123,132 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="APMrover2\afs_rover.cpp" />
+    <ClCompile Include="APMrover2\AP_Arming.cpp" />
+    <ClCompile Include="APMrover2\AP_MotorsUGV.cpp" />
+    <ClCompile Include="APMrover2\AP_Rally.cpp" />
+    <ClCompile Include="APMrover2\balance_bot.cpp" />
+    <ClCompile Include="APMrover2\commands.cpp" />
+    <ClCompile Include="APMrover2\compat.cpp" />
+    <ClCompile Include="APMrover2\crash_check.cpp" />
+    <ClCompile Include="APMrover2\cruise_learn.cpp" />
+    <ClCompile Include="APMrover2\ekf_check.cpp" />
+    <ClCompile Include="APMrover2\failsafe.cpp" />
+    <ClCompile Include="APMrover2\fence.cpp" />
+    <ClCompile Include="APMrover2\GCS_Mavlink.cpp" />
+    <ClCompile Include="APMrover2\GCS_Rover.cpp" />
+    <ClCompile Include="APMrover2\Log.cpp" />
+    <ClCompile Include="APMrover2\mode.cpp" />
+    <ClCompile Include="APMrover2\mode_acro.cpp" />
+    <ClCompile Include="APMrover2\mode_auto.cpp" />
+    <ClCompile Include="APMrover2\mode_follow.cpp" />
+    <ClCompile Include="APMrover2\mode_guided.cpp" />
+    <ClCompile Include="APMrover2\mode_hold.cpp" />
+    <ClCompile Include="APMrover2\mode_loiter.cpp" />
+    <ClCompile Include="APMrover2\mode_manual.cpp" />
+    <ClCompile Include="APMrover2\mode_rtl.cpp" />
+    <ClCompile Include="APMrover2\mode_simple.cpp" />
+    <ClCompile Include="APMrover2\mode_smart_rtl.cpp" />
+    <ClCompile Include="APMrover2\mode_steering.cpp" />
+    <ClCompile Include="APMrover2\motor_test.cpp" />
+    <ClCompile Include="APMrover2\Parameters.cpp" />
+    <ClCompile Include="APMrover2\radio.cpp" />
+    <ClCompile Include="APMrover2\RC_Channel.cpp" />
+    <ClCompile Include="APMrover2\Rover.cpp" />
+    <ClCompile Include="APMrover2\sailboat.cpp" />
+    <ClCompile Include="APMrover2\sensors.cpp" />
+    <ClCompile Include="APMrover2\Steering.cpp" />
+    <ClCompile Include="APMrover2\system.cpp" />
+    <ClCompile Include="APMrover2\version.cpp" />
+    <ClCompile Include="libraries\AP_Math\AP_GeodesicGrid.cpp" />
+    <ClCompile Include="libraries\AP_Math\AP_Math.cpp" />
+    <ClCompile Include="libraries\AP_Math\crc.cpp" />
+    <ClCompile Include="libraries\AP_Math\location.cpp" />
+    <ClCompile Include="libraries\AP_Math\location_double.cpp" />
+    <ClCompile Include="libraries\AP_Math\matrix3.cpp" />
+    <ClCompile Include="libraries\AP_Math\matrixN.cpp" />
+    <ClCompile Include="libraries\AP_Math\matrix_alg.cpp" />
+    <ClCompile Include="libraries\AP_Math\polygon.cpp" />
+    <ClCompile Include="libraries\AP_Math\quaternion.cpp" />
+    <ClCompile Include="libraries\AP_Math\spline5.cpp" />
+    <ClCompile Include="libraries\AP_Math\vector2.cpp" />
+    <ClCompile Include="libraries\AP_Math\vector3.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_AirDataFusion.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_Control.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_core.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_GyroBias.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_Logging.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_MagFusion.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_Measurements.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_OptFlowFusion.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_Outputs.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_PosVelFusion.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_RngBcnFusion.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF3\AP_NavEKF3_VehicleStatus.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF\AP_NavEKF_core_common.cpp" />
+    <ClCompile Include="libraries\AP_NavEKF\AP_Nav_Common.cpp" />
+    <ClCompile Include="libraries\AP_RPM\AP_RPM.cpp" />
+    <ClCompile Include="libraries\AP_RPM\RPM_Backend.cpp" />
+    <ClCompile Include="libraries\AP_RPM\RPM_Pin.cpp" />
+    <ClCompile Include="libraries\AP_RPM\RPM_SITL.cpp" />
+    <ClCompile Include="libraries\AP_WheelEncoder\AP_WheelEncoder.cpp" />
+    <ClCompile Include="libraries\AP_WheelEncoder\AP_WheelRateControl.cpp" />
+    <ClCompile Include="libraries\AP_WheelEncoder\WheelEncoder_Backend.cpp" />
+    <ClCompile Include="libraries\AP_WheelEncoder\WheelEncoder_Quadrature.cpp" />
+    <ClCompile Include="libraries\AP_WheelEncoder\WheelEncoder_SITL_Quadrature.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="APMrover2\afs_rover.h" />
+    <ClInclude Include="APMrover2\AP_Arming.h" />
+    <ClInclude Include="APMrover2\AP_MotorsUGV.h" />
+    <ClInclude Include="APMrover2\AP_Rally.h" />
+    <ClInclude Include="APMrover2\config.h" />
+    <ClInclude Include="APMrover2\defines.h" />
+    <ClInclude Include="APMrover2\GCS_Mavlink.h" />
+    <ClInclude Include="APMrover2\GCS_Rover.h" />
+    <ClInclude Include="APMrover2\mode.h" />
+    <ClInclude Include="APMrover2\Parameters.h" />
+    <ClInclude Include="APMrover2\RC_Channel.h" />
+    <ClInclude Include="APMrover2\Rover.h" />
+    <ClInclude Include="APMrover2\sailboat.h" />
+    <ClInclude Include="APMrover2\version.h" />
+    <ClInclude Include="libraries\AP_Math\AP_GeodesicGrid.h" />
+    <ClInclude Include="libraries\AP_Math\AP_Math.h" />
+    <ClInclude Include="libraries\AP_Math\crc.h" />
+    <ClInclude Include="libraries\AP_Math\definitions.h" />
+    <ClInclude Include="libraries\AP_Math\location.h" />
+    <ClInclude Include="libraries\AP_Math\matrix3.h" />
+    <ClInclude Include="libraries\AP_Math\matrixN.h" />
+    <ClInclude Include="libraries\AP_Math\polygon.h" />
+    <ClInclude Include="libraries\AP_Math\quaternion.h" />
+    <ClInclude Include="libraries\AP_Math\rotations.h" />
+    <ClInclude Include="libraries\AP_Math\spline5.h" />
+    <ClInclude Include="libraries\AP_Math\vector2.h" />
+    <ClInclude Include="libraries\AP_Math\vector3.h" />
+    <ClInclude Include="libraries\AP_Math\vectorN.h" />
+    <ClInclude Include="libraries\AP_NavEKF3\AP_NavEKF3.h" />
+    <ClInclude Include="libraries\AP_NavEKF3\AP_NavEKF3_Buffer.h" />
+    <ClInclude Include="libraries\AP_NavEKF3\AP_NavEKF3_core.h" />
+    <ClInclude Include="libraries\AP_NavEKF\AP_NavEKF_core_common.h" />
+    <ClInclude Include="libraries\AP_NavEKF\AP_Nav_Common.h" />
+    <ClInclude Include="libraries\AP_RPM\AP_RPM.h" />
+    <ClInclude Include="libraries\AP_RPM\RPM_Backend.h" />
+    <ClInclude Include="libraries\AP_RPM\RPM_Pin.h" />
+    <ClInclude Include="libraries\AP_RPM\RPM_SITL.h" />
+    <ClInclude Include="libraries\AP_WheelEncoder\AP_WheelEncoder.h" />
+    <ClInclude Include="libraries\AP_WheelEncoder\AP_WheelRateControl.h" />
+    <ClInclude Include="libraries\AP_WheelEncoder\WheelEncoder_Backend.h" />
+    <ClInclude Include="libraries\AP_WheelEncoder\WheelEncoder_Quadrature.h" />
+    <ClInclude Include="libraries\AP_WheelEncoder\WheelEncoder_SITL_Quadrature.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="APMrover2\createTags" />
+    <None Include="APMrover2\Makefile.waf" />
+    <None Include="APMrover2\wscript" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="APMrover2\release-notes.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
